# rest_test

./: Dockerfile  README.rst  alembic.ini  docker-compose.yaml  pyproject.toml
scripts/: run.sh
src/: main.py  settings.py
src/api/: dependencies.py  router.py  schemas.py
src/db/: base.py  models.py
src/db/migrations/: env.py  sample_data.json
src/db/migrations/versions/: 058accec9aa2_sample_data_upload_data_migration.py  55376fa327b8_gis_migration.py  5fbd82629c7f_initial.py
