[tool.poetry]
name = "rest_test"
version = "0.1.0"
description = ""
authors = ["Anton Gridasov <aogridasov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.116.1"}
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.43"}
alembic = "^1.16.4"
pydantic = "^2.11.7"
phonenumbers = "^9.0.12"
pydantic-extra-types = "^2.10.5"
pydantic-settings = "^2.10.1"
asyncpg = "^0.30.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^7.3.0"
isort = "^6.0.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
